refactored recipe controllers and combined code into one controller. favorites service now uses the mapper method for lists.